# oop_lab6

./: CMakeLists.txt  README.md  main.cpp
include/: NPC.h  dragon.h  knight.h  princess.h
src/: NPC.cpp  dragon.cpp  knight.cpp  princess.cpp
